--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "jest": "^27.5.1",
     "supertest": "^6.2.2",
     "ts-node": "^10.6.0",
+    "ts-node-dev": "^2.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
   },
   "scripts": {
     "test": "npm run tsc -- --noEmit && jest",
     "tsc": "tsc",
-    "dev": "nodemon src/infrastructure/api/server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/infrastructure/api/server.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
